--- a/web/core/templates/includes/sidebar.html
+++ b/web/core/templates/includes/sidebar.html
@@ -5,6 +5,14 @@
 			<div class="navbar-content scroll-div " >
 				<ul class="nav pcoded-inner-navbar ">
 					<li class="nav-item pcoded-menu-caption">
+						<label>Custom Pages</label>
+					</li>
+					<li class="nav-item">
+					    <a href="/dns" class="nav-link ">
+						<span class="pcoded-micon">
+						<i class="feather icon-box"></i></span><span class="pcoded-mtext">DNS</span></a>
+					</li>
+					<li class="nav-item pcoded-menu-caption">
 						<label>Navigation</label>
 					</li>
 					<li class="nav-item">
