--- a/web/core/templates/chart-apex.html
+++ b/web/core/templates/chart-apex.html
@@ -34,7 +34,7 @@
                 <div class="col-md-6">
                     <div class="card">
                         <div class="card-header">
-                            <h5>Basic line chart</h5>
+                            <h5>Temperature Chart</h5>
                         </div>
                         <div class="card-body">
                             <div id="line-chart-1"></div>
