--- a/web/core/templates/accounts/login.html
+++ b/web/core/templates/accounts/login.html
@@ -12,17 +12,12 @@
 					<div class="col-md-12">
 						<div class="card-body">
 
-							<img src="/static/assets/images/logo-dark.png" alt="" class="img-fluid mb-4">
 							<h4 class="mb-3 f-w-400">
-								Sign IN
+								Welcome to Pi-LINk
 							</h4>
 							<span class="mb-0 text-muted">
-								{% if msg %}
-									{{ msg | safe }}
-								{% else %}
-									Add your credentials
-								{% endif %} 
-							</span>
+								Sign In
+						   </span>
 							<!-- dummy spacer -->
 							<p> <br /> </p>						
 							<form role="form" method="post" action="">
@@ -52,12 +47,6 @@
 							</form>
 
 							<p class="mb-0 text-muted">Don’t have an account? <a href="{% url 'register' %}" class="f-w-400">Signup</a></p>
-							<p class="mb-2 text-muted">
-								<br />
-								&copy; <a target="_blank" rel="noopener" href="https://bit.ly/37fF9RT" class="f-w-400">CodedThemes</a>
-								- <a target="_blank" rel="noopener" 
-								     href="https://appseed.us/admin-dashboards/django-dashboard-gradientable" class="f-w-400">Django Gradient</a>
-							</p>
 						</div>
 					</div>
 				</div>
