--- a/web/core/templates/layouts/base.html
+++ b/web/core/templates/layouts/base.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>
-        Django Gradient Able - {% block title %}{% endblock %} | AppSeed
+        Pi-LINk - {% block title %}{% endblock %}
     </title> 
     <!-- HTML5 Shim and Respond.js IE11 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -15,11 +15,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="canonical" href="https://appseed.us/admin-dashboards/django-dashboard-gradientable">
     
     <meta name="description" content="" />
     <meta name="keywords" content="">
-    <meta name="author" content="Codedthemes" />
     <!-- Favicon icon -->
     <link rel="icon" href="/static/assets/images/favicon.ico" type="image/x-icon">
 
