--- a/web/core/templates/explorer.html
+++ b/web/core/templates/explorer.html
@@ -38,7 +38,7 @@
                         </div>
                         <div class="card-body table-border-style">
                             <div class="table-responsive">
-                                <table class="table">
+                                <table class="table table-hover">
                                     <thead>
                                         <tr>
                                             <th>Timestamp</th>
