start device page

--- a/web/core/templates/includes/sidebar.html
+++ b/web/core/templates/includes/sidebar.html
@@ -8,9 +8,19 @@
 						<label>Custom Pages</label>
 					</li>
 					<li class="nav-item">
+					    <a href="/overview" class="nav-link ">
+						<span class="pcoded-micon">
+						<i class="feather icon-box"></i></span><span class="pcoded-mtext">Network Overview</span></a>
+					</li>
+					<li class="nav-item">
 					    <a href="/dns" class="nav-link ">
 						<span class="pcoded-micon">
 						<i class="feather icon-box"></i></span><span class="pcoded-mtext">DNS</span></a>
+					</li>
+					<li class="nav-item">
+					    <a href="/device" class="nav-link ">
+						<span class="pcoded-micon">
+						<i class="feather icon-box"></i></span><span class="pcoded-mtext">Sample Device</span></a>
 					</li>
 					<li class="nav-item pcoded-menu-caption">
 						<label>Navigation</label>
