--- a/web/core/templates/explorer.html
+++ b/web/core/templates/explorer.html
@@ -33,9 +33,18 @@
                 <!-- [ basic-table ] start -->
                 <div class="col-md-6 ">
                     <div class="card">
+                        <form class="DateForm" action="" method="POST">
+                            {% csrf_token %}
+                            {{ form.as_p }}
                         <div class="card-header">
-                            <h5 >IoT MQTT Messages</h5>
+                            <h5 >IoT MQTT Messages {{ test }}</h5>
+                            {{ date_form.date_field }}
+                            <label for="qstart">Start date:</label>
+                            <input type="date" id="qstart" name="trip_qstart" value= "{{ yesterday }}" min="2018-01-01" max="{{ today }}">
+                            <label for="qend">End date:</label>
+                            <input type="date" id="qend" name="trip_qend" value= "{{ today }}" min="2018-01-01" max="{{ tomorrow }}">
                         </div>
+                        </form>
                         <div class="card-body table-border-style">
                             <div class="table-responsive">
                                 <table class="table table-hover">
