date changes API

--- a/web/core/templates/explorer.html
+++ b/web/core/templates/explorer.html
@@ -58,7 +58,7 @@
                             {% csrf_token %}
                             {{ form.as_p }}
                         <div class="card-header">
-                            <h5 >IoT MQTT Messages</h5>
+                            <h5 >IoT MQTT Messages {{ test }}</h5>
                             <label for="qstart">Start date:</label>
                             <input type="date" id="qstart" name="trip_qstart" value= "{{ qstart }}" min="2018-01-01" max="{{ qend }}">
                             <label for="qend">End date:</label>
