--- a/web/core/templates/explorer.html
+++ b/web/core/templates/explorer.html
@@ -60,7 +60,7 @@
                         <div class="card-header">
                             <h5 >IoT MQTT Messages {{ test }}</h5>
                             <label for="qstart">Start date:</label>
-                            <input type="date" id="qstart" name="trip_qstart" value= "{{ qstart }}" min="2018-01-01" max="{{ qend }}">
+                            <input type="date" id="qstart" name="trip_qstart" value= "{{ qstart }}" min="2018-01-01" max="{{ today }}">
                             <label for="qend">End date:</label>
                             <input type="date" id="qend" name="trip_qend" value= "{{ qend }}" min="2018-01-01" max="{{ tomorrow }}">
                             <button>Submit</button>
