--- a/web/core/templates/network_overview.html
+++ b/web/core/templates/network_overview.html
@@ -3,11 +3,11 @@
 {% block title %} UI Tables {% endblock %} 
 <!-- INCLUDING JQUERY-->
 <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+
 <!-- Specific CSS goes HERE -->
 {% block stylesheets %}{% endblock stylesheets %}
 
 {% block content %}	
-
     <!-- [ Main Content ] start -->
     <section class="pcoded-main-container">
         <div class="pcoded-content">
@@ -25,9 +25,10 @@
                             </ul>
                         </div>
                     </div>
-                </div>
+                </div>    
             </div>
             <!-- [ breadcrumb ] end -->
+
             <!-- [ Main Content ] start -->
             <div class="row">
                 <!-- [ info-blurb ] start -->
@@ -77,7 +78,17 @@
                                         </tr>
                                     </thead>
                                     <tbody>
+                                        {% for key, value in lease_data.items %}
                                         <tr>
+                                            <td>{{value.date}}</td>
+                                            <td></td>
+                                            <td>{{value.IP}}</td>
+                                            <td>{{key}}</td>
+                                            <td>{{value.hostname}}</td>
+                                            <td>{{value.vendor}}</td>
+                                        </tr>
+                                        {% endfor %}
+                                        <!-- <tr>
                                             <td>4/9/2021</td>
                                             <td>Camera</td>
                                             <td>10.1.1.11</td>
@@ -125,6 +136,14 @@
                                             <td>Not Provided</td>
                                             <td>SHENZHEN BILIAN ELECTRONIC CO. LTD</td>
                                         </tr>
+                                        <tr>
+                                            <td>4/9/2021</td>
+                                            <td>Motion Sensor</td>
+                                            <td>10.1.1.15</td>
+                                            <td>28:F3:66:A5:FD:45</td>
+                                            <td>Not Provided</td>
+                                            <td>Unknown</td>
+                                        </tr> -->
                                     </tbody>
                                 </table>
                             </div>
@@ -136,6 +155,7 @@
                     <div class="card">
                         <div class="card-header">
                             <h5>Port Overview</h5>
+                            {{ port_info|json_script:"port-info" }}
                         </div>
                         <div class="card-body">
                             <div id="port-graph"></div>
@@ -146,8 +166,8 @@
                 <div class="col-md-6">
                     <div class="card">
                         <div class="card-header">
-                            <h5>Basic Table</h5>
-                            <span class="d-block m-t-5">use class <code>table</code> inside table element</span>
+                            <h5>Manage Updates</h5>
+                            <!-- <span class="d-block m-t-5">use class <code>table</code> inside table element</span> -->
                         </div>
                         <div class="card-body table-border-style">
                             <div class="table-responsive">
@@ -155,29 +175,29 @@
                                     <thead>
                                         <tr>
                                             <th>#</th>
-                                            <th>First Name</th>
-                                            <th>Last Name</th>
-                                            <th>Username</th>
+                                            <th>IP Address</th>
+                                            <th>Firmware</th>
+                                            <th>Last Updated</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr>
                                             <td>1</td>
-                                            <td>Mark</td>
-                                            <td>Otto</td>
-                                            <td>@mdo</td>
+                                            <td>10.1.1.11</td>
+                                            <td>Unknown</td>
+                                            <td>4/9/2021</td>
                                         </tr>
                                         <tr>
                                             <td>2</td>
-                                            <td>Jacob</td>
-                                            <td>Thornton</td>
-                                            <td>@fat</td>
+                                            <td>10.1.1.12</td>
+                                            <td>Unknown</td>
+                                            <td>4/9/2021</td>
                                         </tr>
                                         <tr>
                                             <td>3</td>
-                                            <td>Larry</td>
-                                            <td>the Bird</td>
-                                            <td>@twitter</td>
+                                            <td>10.1.1.13</td>
+                                            <td>Unknown</td>
+                                            <td>4/9/2021</td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -187,7 +207,7 @@
                 </div>
                 <!-- [ basic-table ] end -->
                 <!-- [ inverse-table ] start -->
-                <div class="col-md-6">
+                <!-- <div class="col-md-6">
                     <div class="card">
                         <div class="card-header">
                             <h5>Inverse Table</h5>
@@ -228,10 +248,10 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- [ inverse-table ] end -->
                 <!-- [ Hover-table ] start -->
-                <div class="col-md-6">
+                <!-- <div class="col-md-6">
                     <div class="card">
                         <div class="card-header">
                             <h5>Hover Table</h5>
@@ -272,56 +292,12 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- [ Hover-table ] end -->
-                <!-- [ dark-table ] start -->
-                <div class="col-md-6">
-                    <div class="card">
-                        <div class="card-header">
-                            <h5>Dark Table</h5>
-                            <span class="d-block m-t-5">use class <code>table-dark</code> inside table element</span>
-                        </div>
-                        <div class="card-body table-border-style">
-                            <div class="table-responsive">
-                                <table class="table table-dark">
-                                    <thead>
-                                        <tr>
-                                            <th>#</th>
-                                            <th>First Name</th>
-                                            <th>Last Name</th>
-                                            <th>Username</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>1</td>
-                                            <td>Mark</td>
-                                            <td>Otto</td>
-                                            <td>@mdo</td>
-                                        </tr>
-                                        <tr>
-                                            <td>2</td>
-                                            <td>Jacob</td>
-                                            <td>Thornton</td>
-                                            <td>@fat</td>
-                                        </tr>
-                                        <tr>
-                                            <td>3</td>
-                                            <td>Larry</td>
-                                            <td>the Bird</td>
-                                            <td>@twitter</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- [ dark-table ] end -->
                 {% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}
     <script src="/static/assets/js/plugins/apexcharts.min.js"></script>
-    <script src="/static/assets/js/pages/dev_overview.js"></script>
+    <script src="/static/assets/js/pages/net_overview.js"></script>
 {% endblock javascripts %}
