device updates, functionality, healtchecks

--- a/web/core/templates/network_overview.html
+++ b/web/core/templates/network_overview.html
@@ -82,68 +82,12 @@
                                         <tr>
                                             <td>{{value.date}}</td>
                                             <td></td>
-                                            <td>{{value.IP}}</td>
+                                            <td><a href="/device/{{value.IP}}"> {{value.IP}} </a> </td>
                                             <td>{{key}}</td>
                                             <td>{{value.hostname}}</td>
                                             <td>{{value.vendor}}</td>
                                         </tr>
                                         {% endfor %}
-                                        <!-- <tr>
-                                            <td>4/9/2021</td>
-                                            <td>Camera</td>
-                                            <td>10.1.1.11</td>
-                                            <td>44:01:bb:7d:b0:23</td>
-                                            <td>Not Provided</td>
-                                            <td>SHENZHEN BILIAN ELECTRONIC CO. LTD</td>
-                                        </tr>
-                                        <tr>
-                                            <td>4/9/2021</td>
-                                            <td>Air Controller</td>
-                                            <td>10.1.1.15</td>
-                                            <td>20:F4:1B:52:D1:C3</td>
-                                            <td>Not Provided</td>
-                                            <td>SHENZHEN BILIAN ELECTRONIC CO. LTD</td>
-                                        </tr>
-                                        <tr>
-                                            <td>4/9/2021</td>
-                                            <td>Fridge</td>
-                                            <td>10.1.1.12</td>
-                                            <td>90:83:7A:B2:9D:A5</td>
-                                            <td>Not Provided</td>
-                                            <td>General Electric Water & Process Technologies</td>
-                                        </tr>
-                                        <tr>
-                                            <td>4/9/2021</td>
-                                            <td>Switch</td>
-                                            <td>10.1.1.13</td>
-                                            <td>20:F4:1B:A8:14:F2</td>
-                                            <td>Not Provided</td>
-                                            <td>SHENZHEN BILIAN ELECTRONIC CO. LTD</td>
-                                        </tr>
-                                        <tr>
-                                            <td>4/9/2021</td>
-                                            <td>Switch</td>
-                                            <td>10.1.1.14</td>
-                                            <td>20:F4:1B:11:A4:3C</td>
-                                            <td>Not Provided</td>
-                                            <td>SHENZHEN BILIAN ELECTRONIC CO. LTD</td>
-                                        </tr>
-                                        <tr>
-                                            <td>4/9/2021</td>
-                                            <td>Plug</td>
-                                            <td>10.1.1.14</td>
-                                            <td>44:33:4C:A5:18:B1</td>
-                                            <td>Not Provided</td>
-                                            <td>SHENZHEN BILIAN ELECTRONIC CO. LTD</td>
-                                        </tr>
-                                        <tr>
-                                            <td>4/9/2021</td>
-                                            <td>Motion Sensor</td>
-                                            <td>10.1.1.15</td>
-                                            <td>28:F3:66:A5:FD:45</td>
-                                            <td>Not Provided</td>
-                                            <td>Unknown</td>
-                                        </tr> -->
                                     </tbody>
                                 </table>
                             </div>
