--- a/web/core/templates/device_overview.html
+++ b/web/core/templates/device_overview.html
@@ -55,10 +55,8 @@
 						</div>
 					</div>
 				</div>
-				<!-- [ sample-page ] end -->
 			</div>
             <div class="row">
-                <!-- [ form-element ] start -->
                 <div class="col-sm-12">
                     <div class="card">
                         <div class="card-header">
@@ -68,7 +66,8 @@
                             <h5> Network Information {{ type }}</h5>
                             <hr>
                             <div class="col-md-6">
-                                <form>
+                                <form action="/device/{{ ip }}" method="post">
+                                {% csrf_token %} 
                                     <div class="form-group row">
                                         <label for="staticIP" class="col-sm-3 col-form-label">IP Address</label>
                                         <div class="col-sm-9">
@@ -83,20 +82,23 @@
                                             <small id="macHelp" class="form-text text-muted">The hardcoded address the device uses to communicate.</small>
                                         </div>
                                     </div>
-                            </div>
-                            <div class="col-md-6">
-                                 <div class="custom-control custom-switch">
-                                    <input type="checkbox" class="custom-control-input" id="ipSwitch">
-                                    <label class="custom-control-label" for="ipSwitch">Static IP</label>
+                            <div class="form-group row">
+                                    <label for="staticMAC" class="col-sm-3 col-form-label">Static IP</label>
+                                 <div class="col-sm-9 custom-control custom-switch">
+                                    <input type="checkbox" class="custom-control-input" id="ipSwitch" checked>
+                                    <label class="custom-control-label" for="ipSwitch">Enable</label>
+                                    <small id="ipSwitch" class="form-text text-muted">Will the IP Address of the device change over time</small>
                                 </div>
                             </div>
-                            <div class="input-group mb-3">
+                            </div>
+                            <div class="input-group col-md-3">
                                 <div class="input-group-prepend">
                                     <span class="input-group-text" id="inputGroup-sizing-default">Ports</span>
                                 </div>
-                                <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default" value= "{% for p in open_ports %} {{ p }} {% endfor %}"">
+                                <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default" value= "{% for p in open_ports %} {{ p }} {% endfor %}">
                             </div>
-                            <div class="col-md-6">
+                            
+                            <div class="col-md-5">
                                     <div class="card-header">
                                         <h5>Open Ports</h5>
                                         <span class="d-block m-t-5">List of open ports and their <code> risk </code> </code> factor </span>
@@ -133,7 +135,7 @@
                                                     {% elif info.risk == 3 %}
                                                         <td> HIGH </td>
                                                     {% else %}
-                                                        <td> N/A </td>
+                                                        <td> Unknown </td>
                                                     {% endif %}
 
                                                         <td>{{ info.service }}</td>
@@ -141,11 +143,20 @@
                                                     </tr>
                                                       {% endfor %}
                                                     
+                                                    {% if not port_info.keys  %}
+                                                        <tr class="bg-success">
+                                                        <td> None </td>
+                                                        <td> None </td>
+                                                        <td> None </td>
+                                                        <td> None </td>
+                                                        </tr>
+                                                    {% endif %}
                                                 </tbody>
                                             </table>
                                         </div>
                                     </div>
                             </div>
+                             <button type="submit" class="btn  btn-primary">Update</button>
                             </form>
                         </div>
                     </div>
