--- a/web/core/templates/includes/sidebar.html
+++ b/web/core/templates/includes/sidebar.html
@@ -18,7 +18,7 @@
 						<i class="feather icon-box"></i></span><span class="pcoded-mtext">DNS</span></a>
 					</li>
 					<li class="nav-item">
-					    <a href="/device" class="nav-link ">
+					    <a href="/device/10.1.1.11" class="nav-link ">
 						<span class="pcoded-micon">
 						<i class="feather icon-box"></i></span><span class="pcoded-mtext">Sample Device</span></a>
 					</li>
