--- a/web/core/templates/network_overview.html
+++ b/web/core/templates/network_overview.html
@@ -73,8 +73,7 @@
                                             <th>MAC Address</th>
                                             <th>Hostname</th>
                                             <th>Device Vendor</th>
-                                            <th></th>
-
+                                            <th>Status</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -85,6 +84,7 @@
                                             <td>{{key}}</td>
                                             <td>{{value.hostname}}</td>
                                             <td>{{value.vendor}}</td>
+                                            <td style="color: green">ENABLED</td>
                                         </tr>
                                         {% endfor %}
                                     </tbody>
@@ -110,6 +110,7 @@
                     <div class="card">
                         <div class="card-header">
                             <h5>Manage Updates</h5>
+                            <button class="btn  btn-secondary" type="button" style="float: right"><i class='fas fa-edit'></i></button>
                         </div>
                         <div class="card-body table-border-style">
                             <div class="table-responsive">
@@ -119,6 +120,7 @@
                                             <th>Date Added</th>
                                             <th>MAC Address</th>
                                             <th>Last Updated</th>
+                                            <th>Firmware</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -127,6 +129,7 @@
                                             <td>{{value.date_added}}</td>
                                             <td>{{key}}</td>
                                             <td>{{value.last_updated}}</td>
+                                            <tD>{{value.firmware}}</tD>
                                         </tr>
                                         {% endfor %}
                                     </tbody>
@@ -135,95 +138,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- [ basic-table ] end -->
-                <!-- [ inverse-table ] start -->
-                <!-- <div class="col-md-6">
-                    <div class="card">
-                        <div class="card-header">
-                            <h5>Inverse Table</h5>
-                            <span class="d-block m-t-5">use class <code>table-inverse</code> inside table element</span>
-                        </div>
-                        <div class="card-body table-border-style">
-                            <div class="table-responsive">
-                                <table class="table table-inverse">
-                                    <thead>
-                                        <tr>
-                                            <th>#</th>
-                                            <th>First Name</th>
-                                            <th>Last Name</th>
-                                            <th>Username</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>1</td>
-                                            <td>Mark</td>
-                                            <td>Otto</td>
-                                            <td>@mdo</td>
-                                        </tr>
-                                        <tr>
-                                            <td>2</td>
-                                            <td>Jacob</td>
-                                            <td>Thornton</td>
-                                            <td>@fat</td>
-                                        </tr>
-                                        <tr>
-                                            <td>3</td>
-                                            <td>Larry</td>
-                                            <td>the Bird</td>
-                                            <td>@twitter</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
-                <!-- [ inverse-table ] end -->
-                <!-- [ Hover-table ] start -->
-                <!-- <div class="col-md-6">
-                    <div class="card">
-                        <div class="card-header">
-                            <h5>Hover Table</h5>
-                            <span class="d-block m-t-5">use class <code>table-hover</code> inside table element</span>
-                        </div>
-                        <div class="card-body table-border-style">
-                            <div class="table-responsive">
-                                <table class="table table-hover">
-                                    <thead>
-                                        <tr>
-                                            <th>#</th>
-                                            <th>First Name</th>
-                                            <th>Last Name</th>
-                                            <th>Username</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr>
-                                            <td>1</td>
-                                            <td>Mark</td>
-                                            <td>Otto</td>
-                                            <td>@mdo</td>
-                                        </tr>
-                                        <tr>
-                                            <td>2</td>
-                                            <td>Jacob</td>
-                                            <td>Thornton</td>
-                                            <td>@fat</td>
-                                        </tr>
-                                        <tr>
-                                            <td>3</td>
-                                            <td>Larry</td>
-                                            <td>the Bird</td>
-                                            <td>@twitter</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
-                <!-- [ Hover-table ] end -->
                 {% endblock content %}
 
 <!-- Specific Page JS goes HERE  -->
