--- a/web/core/templates/layouts/base.html
+++ b/web/core/templates/layouts/base.html
@@ -4,7 +4,7 @@
 <head>
     <title>
         Django Gradient Able - {% block title %}{% endblock %} | AppSeed
-    </title> 
+    </title>
     <!-- HTML5 Shim and Respond.js IE11 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 11]>
@@ -16,7 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="canonical" href="https://appseed.us/admin-dashboards/django-dashboard-gradientable">
-    
+
     <meta name="description" content="" />
     <meta name="keywords" content="">
     <meta name="author" content="Codedthemes" />
@@ -25,31 +25,37 @@
 
     <!-- vendor css -->
     <link rel="stylesheet" href="/static/assets/css/style.css">
-    
-    <!-- Specific CSS goes HERE -->
-    {% block stylesheets %}{% endblock stylesheets %}    
 
+    <!-- Specific CSS goes HERE -->
+    {% block stylesheets %}
+    {% endblock stylesheets %}
 </head>
+
 <body class="">
 
-	<!-- [ Pre-loader ] start -->
-	<div class="loader-bg">
-		<div class="loader-track">
-			<div class="loader-fill"></div>
-		</div>
-	</div>
+    <!-- [ Pre-loader ] start -->
+    <div class="loader-bg">
+        <div class="loader-track">
+            <div class="loader-fill"></div>
+        </div>
+    </div>
     <!-- [ Pre-loader ] End -->
-    
+
     {% include 'includes/sidebar.html' %}
-    
+
     {% include 'includes/navigation.html' %}
 
     {% block content %}{% endblock content %}
 
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     {% include 'includes/scripts.html' %}
 
     <!-- Specific Page JS goes HERE  -->
-    {% block javascripts %}{% endblock javascripts %}
-
+    {% block javascripts %}
+    
+    {% endblock javascripts %}
 </body>
+
 </html>
